added color to seach button text to make it more visible

--- a/src/styles/SearchForm.css
+++ b/src/styles/SearchForm.css
@@ -13,7 +13,7 @@
   .search-button {
     padding: 10px 20px;
     background-color: #333;
-    color: #fff;
+    color:black;
     border: none;
     cursor: pointer;
     transition: background-color 0.3s ease;
