--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,14 +1,11 @@
-/* Home.css */
-
 .container {
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
-
-
 
 .results {
   margin-top: 20px;
@@ -39,10 +36,12 @@
 @media (max-width: 600px) {
   .container {
     padding: 10px;
+    flex-direction: column;
+    align-items: flex-start;
   }
 
-  .title {
-    font-size: 20px;
+  .results {
+    width: 100%;
   }
 
   .result-item {
@@ -51,9 +50,11 @@
 
   .result-item h3 {
     font-size: 16px;
+    margin-bottom: 3px;
   }
 
   .result-item p {
     font-size: 12px;
+    margin-bottom: 3px;
   }
 }
