--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,60 +1,61 @@
+/* Home.css */
+
 .container {
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+}
+
+h1 {
+  font-size: 50px;
+  margin-bottom: 20px;
 }
 
 .results {
-  margin-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
 }
 
 .result-item {
-  margin-bottom: 10px;
-  padding: 10px;
-  background-color: #f0f0f0;
-  border-radius: 5px;
+  border: 1px solid #ccc;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
 }
 
 .result-item h3 {
   font-size: 18px;
-  margin-bottom: 5px;
-}
-
-.result-item p {
-  font-size: 14px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 
 .result-item a {
-  color: #007bff;
+  display: inline-block;
+  background-color: #007bff;
+  color: #fff;
+  padding: 8px 16px;
+  border-radius: 4px;
   text-decoration: none;
+  transition: background-color 0.3s ease;
 }
 
-@media (max-width: 600px) {
-  .container {
-    padding: 10px;
-    flex-direction: column;
-    align-items: flex-start;
-  }
+.result-item a:hover {
+  background-color: #0056b3;
+}
 
-  .results {
-    width: 100%;
-  }
+.reset-button {
+  margin-top: 10px;
+  padding: 8px 16px;
+  font-size: 14px;
+  background-color: #ccc;
+  color: #333;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
 
-  .result-item {
-    padding: 5px;
-  }
-
-  .result-item h3 {
-    font-size: 16px;
-    margin-bottom: 3px;
-  }
-
-  .result-item p {
-    font-size: 12px;
-    margin-bottom: 3px;
-  }
+.reset-button:hover {
+  background-color: #999;
 }
