--- a/src/styles/SearchForm.css
+++ b/src/styles/SearchForm.css
@@ -1,4 +1,14 @@
-/* CSS styles for the SearchForm component */
+
+
+
+.search-form-container {
+  display: flex;
+  margin-top: 20px;
+  flex-direction: column;
+  align-items: center;
+}
+
+
 .search-form {
   display: flex;
   align-items: center;
@@ -29,21 +39,20 @@
   cursor: not-allowed;
 }
 
-/* Additional styles for other elements in the component */
-.loading-message {
+/* Loading and error messages */
+.loading-message,
+.error-message {
   font-size: 18px;
   margin-bottom: 20px;
-}
-
-.error-message {
   color: red;
-  margin-bottom: 20px;
 }
 
+/* Recipe container */
 .recipe-container {
   margin-bottom: 20px;
 }
 
+/* Recipe title and image */
 .recipe-title {
   font-size: 20px;
   margin-bottom: 10px;
@@ -56,6 +65,7 @@
   margin-bottom: 10px;
 }
 
+/* Ingredients list */
 .ingredients-list {
   list-style-type: none;
   margin: 0;
@@ -67,6 +77,7 @@
   margin-bottom: 5px;
 }
 
+/* Instructions button */
 .instructions-button {
   padding: 5px 10px;
   font-size: 14px;
@@ -81,6 +92,7 @@
   margin-left: 5px;
 }
 
+/* Instructions container and list */
 .instructions-container {
   margin-top: 10px;
 }
@@ -100,6 +112,7 @@
   margin-bottom: 5px;
 }
 
+/* Clear button */
 .clear-button {
   padding: 10px 20px;
   font-size: 16px;
@@ -116,9 +129,31 @@
   cursor: not-allowed;
 }
 
-.search-form-container {
-  margin-top: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+/* Media queries for responsiveness */
+@media (max-width: 768px) {
+  .search-form {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .search-input,
+  .search-button {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+  
+  .recipe-title {
+    font-size: 18px;
+  }
+  
+  .recipe-image {
+    width: 100%;
+    height: auto;
+  }
+  
+  .ingredients-list li,
+  .instructions-list li {
+    font-size: 14px;
+  }
 }
