added some styling updates

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,61 +1,95 @@
-/* Home.css */
-
-.container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
-
+/* Base styles for mobile */
+.home-container {
+  padding: 10px; /* Reduce padding for smaller screens */
 }
 
 h1 {
-  font-size: 50px;
-  margin-bottom: 20px;
+  font-size: 20px; /* Smaller font size for mobile */
+  margin-top: 20px; /* Reduce top margin for mobile */
 }
 
 .results {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 20px;
+  grid-template-columns: 1fr; /* Single column layout for mobile */
+  gap: 10px; /* Reduce gap for mobile */
 }
 
 .result-item {
-  border: 1px solid #ccc;
-  padding: 20px;
-  background-color: #f9f9f9;
-  border-radius: 8px;
+  padding: 10px; /* Reduce padding for mobile */
 }
 
 .result-item h3 {
-  font-size: 18px;
-  margin-bottom: 10px;
+  font-size: 16px; /* Smaller font size for mobile */
+  margin-bottom: 8px; /* Reduce bottom margin for mobile */
 }
 
 .result-item a {
-  display: inline-block;
-  background-color: #007bff;
-  color: #fff;
-  padding: 8px 16px;
-  border-radius: 4px;
-  text-decoration: none;
-  transition: background-color 0.3s ease;
-}
-
-.result-item a:hover {
-  background-color: #0056b3;
+  padding: 6px 12px; /* Reduce padding for mobile */
+  font-size: 14px; /* Smaller font size for mobile */
 }
 
 .reset-button {
-  margin-top: 10px;
-  padding: 8px 16px;
-  font-size: 14px;
-  background-color: #ccc;
-  color: #333;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+  margin-top: 8px; /* Reduce top margin for mobile */
+  padding: 6px 12px; /* Reduce padding for mobile */
+  font-size: 12px; /* Smaller font size for mobile */
 }
 
-.reset-button:hover {
-  background-color: #999;
+/* Media Query for Larger Screens */
+@media (min-width: 768px) {
+  .home-container {
+    max-width: 800px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 20px;
+  }
+
+  h1 {
+    font-size: 50px;
+    margin-top: 50px;
+  }
+
+  .results {
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 20px;
+  }
+
+  .result-item {
+    border: 1px solid #ccc;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+  }
+
+  .result-item h3 {
+    font-size: 18px;
+    margin-bottom: 10px;
+  }
+
+  .result-item a {
+    display: inline-block;
+    background-color: #007bff;
+    color: #fff;
+    padding: 8px 16px;
+    border-radius: 4px;
+    text-decoration: none;
+  }
+
+  .result-item a:hover {
+    background-color: #0056b3;
+  }
+
+  .reset-button {
+    margin-top: 10px;
+    padding: 8px 16px;
+    font-size: 14px;
+    background-color: #ccc;
+    color: #333;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  .reset-button:hover {
+    background-color: #999;
+  }
 }
