--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,36 +1,37 @@
 
-
 .footer-container {
-    background-color: lightseagreen;
-    color: #fff;
-    padding: 2rem 0;
-    text-align: center;
+  background-color: lightseagreen;
+  color: #fff;
+  text-align: center;
+  padding: 2rem 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+.footer-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer-text {
+  margin-bottom: 1rem;
+  font-size: 1.2rem;
+}
+
+
+.footer-author {
+  color: #f39c12;
+}
+
+
+@media (max-width: 768px) {
+  .footer-container {
+    padding: 1rem 0;
   }
-  
-  .footer-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
+
   .footer-text {
-    margin-bottom: 1rem;
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
-  
-  .footer-author {
-    color: #f39c12; 
-  }
-  
-  /* Media Queries for Responsiveness */
-  
-  @media (max-width: 768px) {
-    .footer-container {
-      padding: 1rem 0;
-    }
-    
-    .footer-text {
-      font-size: 1rem;
-    }
-  }
-  
+}
